// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Default renders correctly 1`] = `
<jest>
  <nav
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
        >
          Item 1 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 2 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 3 label
        </a>
        <a
          aria-selected="true"
          class="ecl-link ecl-tabs__link ecl-tabs__item ecl-tabs__link--active"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 4 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 5 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 6 with a very long label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 7 label
        </a>
        <button
          aria-hidden="true"
          class="ecl-button ecl-button--secondary ecl-tabs__toggle ecl-tabs__item ecl-tabs__item--more"
          role="tab"
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              More (%d)
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-tabs__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        aria-hidden="true"
        class="ecl-tabs__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
    </div>
  </nav>
</jest>
`;

exports[`Tabs Default renders correctly with extra attributes 1`] = `
<jest>
  <nav
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
        >
          Item 1 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 2 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 3 label
        </a>
        <a
          aria-selected="true"
          class="ecl-link ecl-tabs__link ecl-tabs__item ecl-tabs__link--active"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 4 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 5 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 6 with a very long label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 7 label
        </a>
        <button
          aria-hidden="true"
          class="ecl-button ecl-button--secondary ecl-tabs__toggle ecl-tabs__item ecl-tabs__item--more"
          role="tab"
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              More (%d)
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-tabs__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        aria-hidden="true"
        class="ecl-tabs__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
    </div>
  </nav>
</jest>
`;

exports[`Tabs Default renders correctly with extra class names 1`] = `
<jest>
  <nav
    class="ecl-tabs custom-class custom-class--test"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
        >
          Item 1 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 2 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 3 label
        </a>
        <a
          aria-selected="true"
          class="ecl-link ecl-tabs__link ecl-tabs__item ecl-tabs__link--active"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 4 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 5 label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 6 with a very long label
        </a>
        <a
          aria-selected="false"
          class="ecl-link ecl-tabs__link ecl-tabs__item"
          href="/example"
          role="tab"
          tabindex="-1"
        >
          Item 7 label
        </a>
        <button
          aria-hidden="true"
          class="ecl-button ecl-button--secondary ecl-tabs__toggle ecl-tabs__item ecl-tabs__item--more"
          role="tab"
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              More (%d)
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-tabs__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        aria-hidden="true"
        class="ecl-tabs__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
    </div>
  </nav>
</jest>
`;
